# common-nb-preprocessors

./: .autorc  .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  credits.html  genindex.html  install.html  intro.html  objects.inv  preprocessors.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html  utility_reference.html
.auto/: update_version.sh
.doctrees/: credits.doctree  environment.pickle  install.doctree  intro.doctree  preprocessors.doctree  usage.doctree  utility_reference.doctree
.doctrees/general/: code_of_conduct.doctree  dependencies.doctree  license.doctree
.github/: CONTRIBUTING.md  config.yml
.github/workflows/: main.yml  pypi.yml  skip_test.yml  test.yml
_sources/: credits.md.txt  install.md.txt  intro.md.txt  usage.ipynb.txt  utility_reference.md.txt
common_nb_preprocessors/: __init__.py  _constant_builder.py  _nested_dict_updater.py  _patterns.py  keep.py  metadata_injector.py  myst_nb.py
docs/: _toc.yml  api.md  conf.py  intro.md  motivation.md  preprocessors.ipynb  usage.ipynb
general/: code_of_conduct.html  dependencies.html  license.html
notebooks/: dev.ipynb
src/common_nb_preprocessors/: __init__.py  metadata_injector.py
tests/: __init__.py  test_constants.py  test_keep.py  test_metadata_injector.py  test_mystnb.py  test_nested_dict_updater.py  test_pattern.py
